src/objects/PF_TestCases__c.object
<CustomObject>
    <description>pForce</description>
    <fields>
        <fullName>Component_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Component Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Functionality__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Functionality</label>
        <referenceTo>Functionality__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PF_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PF_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_First_Pass_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>First Pass Result</inlineHelpText>
        <label>First Pass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PF_QA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PF_Regression__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PF_SIT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA/SIT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PF_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Execution</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_TC_Creation_Effort__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TC Creation Effort</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PF_TC_Execution_Effort__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TC Execution Effort</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PF_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>PF_Tasks__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PF_Test_Plan_Date__c</fullName>
        <label>Test Plan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Total_Defects__c</fullName>
        <label>Total Defects</label>
        <summaryFilterItems>
            <field>PF_Defects__c.PF_Testing_Cycle__c</field>
            <operation>equals</operation>
            <value>SIT</value>
        </summaryFilterItems>
        <summaryForeignKey>PF_Defects__c.PF_Test_Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PF_Total_Test_Case_Execution__c</fullName>
        <inlineHelpText>Number of SIT test case excecutions</inlineHelpText>
        <label>Total QA/SIT Execution</label>
        <summaryFilterItems>
            <field>PF_TestCaseExecution__c.PF_Test_Execution_Type__c</field>
            <operation>equals</operation>
            <value>SIT</value>
        </summaryFilterItems>
        <summaryForeignKey>PF_TestCaseExecution__c.PF_Test_Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PF_Total_Testing_Effort__c</fullName>
        <formula>PF_TC_Creation_Effort__c +  PF_TC_Execution_Effort__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Testing Effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PF_UAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PF_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workstream__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workstream</label>
        <referenceTo>PF_Sprints__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PF_Title__c</columns>
        <columns>Functionality__c</columns>
        <columns>PF_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>PF_Task__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TC-{00000}</displayFormat>
        <label>Test Case #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <recordTypes>
        <fullName>Component_Test</fullName>
        <active>true</active>
        <description>Use this Record type to create Component tests</description>
        <label>Component Test</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unit_Test</fullName>
        <active>true</active>
        <description>Use this Record Type to create Unit tests</description>
        <label>Unit Test</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Testing_Phase_must_be_selected</fullName>
        <active>false</active>
        <description>At least one of the Unit / SIT / UAT phase must be selected.</description>
        <errorConditionFormula>!PF_UAT__c &amp;&amp;  !PF_Unit__c &amp;&amp; !PF_SIT__c</errorConditionFormula>
        <errorMessage>At least one of the Unit / SIT / UAT phase must be selected.</errorMessage>
    </validationRules>
</CustomObject>